PFP_UAT/latest/files/home/ec2-user/deployment_artifacts/worker-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: 211125559653.dkr.ecr.af-south-1.amazonaws.com/nonprod_pfp_ecr:worker
          imagePullPolicy: Always
