PFP_UAT/latest/files/home/ec2-user/deployment_artifacts/api-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-depl
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: 211125559653.dkr.ecr.af-south-1.amazonaws.com/nonprod_pfp_ecr:api
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: api-serv
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
  type: ClusterIP
